--- a/package.json
+++ b/package.json
@@ -32,5 +32,9 @@
     "post-install": "node ./node_modules/bower/bin/bower install",
     "start": "node ./node_modules/gulp/bin/gulp.js",
     "build": "node ./node_modules/gulp/bin/gulp.js build"
+  },
+  "dependencies": {
+    "scrollreveal": "^2.3.2",
+    "velocity-animate": "^1.2.3"
   }
 }
