--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "jquery": "^2.1.4",
     "lodash": "^3.10.1",
     "scrollreveal": "^2.3.2",
+    "scrolltofixed": "^1.0.6",
     "velocity-animate": "^1.2.3"
   }
 }
